# fvdb-core

./: .dockerignore  .gitignore  .readthedocs.yaml  AGENTS.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  DispatchPreprocessingProposal.md  Dockerfile  FunctionalRefactorProposal.md  MAINTAINERS.md  PR_DESCRIPTION.md  README.md  TODO_ACCUM_OPTIMIZATION.md  TODO_FUNC_SPLAT.md  TODO_MILESTONES_9_12.md  build.sh  convolution_results.json  cutlass_benchmark.json  docker-compose.yml  pyproject.toml
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/convolution/: benchmark_sparse_conv_comparison.py  convolution_benchmark.cu  cutlass_benchmark.cu  gather_scatter_conv_benchmark.cu  visualize_comparison.py  visualize_conv_benchmark.py  visualize_convolution_benchmark.py  visualize_cutlass_benchmark.py
src/benchmarks/dispatch/: cpu_pool_comparison.cpp  for_each_benchmark.cu  omp_gelu.cpp  omp_gelu.h  queue_pool.h  spin_pool.h  synthetic_voxel_benchmark.cpp  visualize_benchmark.py
src/benchmarks/gelu_comparison/: cpu_pool_comparison.cpp  gelu_benchmark.cu  gelu_old.cu  gelu_old.cuh  omp_gelu.cpp  omp_gelu.h  synthetic_voxel_benchmark.cpp
src/benchmarks/scripts/: visualize_benchmark.py
src/benchmarks/simple/: simple.cpp
src/cmake/: fvdbConfig.cmake.in  fvdbWheelConfig.cmake.in  get_cutlass.cmake  get_fused_ssim.cmake  get_nanovdb.cmake  get_nanovdb_editor.cmake  get_pybind11.cmake  get_test_data.cmake  get_torch.cmake
src/dispatch/: CMakeLists.txt  README.md  dispatch_stub.cu
src/dispatch/dispatch/: axes.h  axes_map.h  axis.h  basic_thread_pool.h  broadcast_pool.h  consteval_types.h  detail.h  dispatch_set.h  dispatch_table.h  enums.h  extents.h  for_each_torch.h  indices.h  iteration_policy.h  label.h  label_sorted.h  macros.h  tag.h  tag_match.h  thread_pool.h  torch.h  torch_types.h  types.h  unary_elementwise.h  vectorization_policy.h  visit_spaces.h  with_value.h  work_stealing_pool.h
src/dispatch/dispatch/detail/: axes_map.h  core_types.h  index_math.h  visit_spaces.h
src/dispatch/dispatch/torch/: CONV_FIX_PLAN.md  DESIGN.md  accessors.h  accessors_A.h  accessors_B.h  accessors_C.h  dispatch.h  for_each.h  gather_scatter.h  nd_accessor.h  types.h  unary_elementwise.h  views.h
src/dispatch/examples/: ReLU.cu  ReLU.h  ScanLib.cu  affine_xform_blocks.cu  affine_xform_blocks.h  affine_xform_ternary.cu  affine_xform_ternary.h  common.h  design_ideas.cu  functional.cu  functional.h  gelu_for_each.cu  gelu_for_each.h  gelu_scalar.h  gelu_vectorized.cuh  op.cu  op.h  relu.cu  relu.h  scan_lib.cpp  scan_lib.cu  scan_lib.h  softplus.cu  softplus.h
src/dispatch/old_tests/: ValuesTest.cpp
src/dispatch/src/dispatch/: ConcreteTensor.h  axes_map.h  axis.h  (+15 more)
src/dispatch/tests/: DispatchTableBasicImplCudaTest.cu  ExampleOpTest.cpp  ValueSpaceMapCudaTest.cu  affine_xform_ternary_test.cpp  axes_map_test.cpp  detail_index_math_test.cpp  dispatch_table_test.cpp  for_each_test.cu  gather_scatter_test.cu  gelu_for_each_test.cpp  inclusive_scan_examples_test.cpp  label_tag_axis_test.cpp  nvcc_smoke_test.cu  relu_test.cpp  scan_lib_cuda_test.cu  scan_lib_host_test.cpp  test_utils.cuh  test_utils.h  thread_pool_test.cpp  torch_test.cpp  types_test.cpp  views_test.cu  visit_spaces_test.cpp  with_value_test.cpp
src/fvdb/: Config.cpp  Config.h  FVDB.cpp  FVDB.h  GaussianSplat3d.cpp  GaussianSplat3d.h  GaussianSplatting.cpp  GaussianSplatting.h  GridBatch.cpp  GridBatch.h  GridBatchData.cu  GridBatchData.h  JaggedTensor.cpp  JaggedTensor.h  NanoVDBGridMetadata.h  SparseConvPackInfo.cpp  SparseConvPackInfo.h  TorchDeviceBuffer.cpp  TorchDeviceBuffer.h  TypeTraits.h  Types.h  VoxelCoordTransform.h
src/fvdb/detail/: GridBatchData.cu  GridBatchData.h  GridBatchDataFactory.cu  GridBatchDataFactory.h  GridBatchImpl.cu  GridBatchImpl.h
src/fvdb/nanovdb_overrides/: README.md
src/python/: Bindings.cpp  FusedSSIMBinding.cpp  GaussianSplatBinding.cpp  GaussianSplatOps.cpp  GridBatchBinding.cpp  GridBatchDataBinding.cpp  GridBatchImplBinding.cpp  GridBatchOps.cpp  IntrusivePtrHolder.h  JaggedTensorBinding.cpp  PersistentTSDFStateBinding.cpp  TypeCasters.h  ViewerBinding.cpp
src/scripts/: run_black.sh  run_clang_format.sh
src/tests/: CMakeLists.txt  CutlassGroupedGemmConvTest.cu  DeduplicatePixelsTest.cpp  ExampleTest.cpp  GatherScatterConvTest.cu  GatherScatterDefaultConvTest.cu  GaussianCamerasOpTest.cu  GaussianCamerasTest.cu  GaussianComputeNanInfMaskTest.cpp  GaussianComputeSparseInfoTest.cpp  GaussianMCMCAddNoiseTest.cpp  GaussianMCMCRelocationTest.cpp  GaussianPlyIOTest.cpp  GaussianProjectionBackwardTest.cpp  GaussianProjectionForwardTest.cpp  GaussianProjectionJaggedTest.cpp  GaussianProjectionUTTest.cpp  GaussianRasterizeBackwardTest.cpp  GaussianRasterizeContributingGaussianIdsTest.cpp  GaussianRasterizeForwardTest.cpp  GaussianRasterizeTopContributorsTest.cpp  GaussianRasterizeWorldSpaceTest.cpp  GaussianRelocationTest.cpp  GaussianSphericalHarmonicsBackwardTest.cpp  GaussianSphericalHarmonicsForwardTest.cpp  GaussianSplat3dCameraApiTest.cpp  GaussianTileIntersectionTest.cpp  GaussianTopContributorsTest.cpp  GaussianUtilsTest.cu  GroupedGemmConvTest.cu  HDDAIteratorsTest.cpp  JaggedTensorTest.cpp  LoadNanovdbTest.cpp  PackedJaggedAccessorTest.cu  PredGatherIGemmTest.cu  PrefetchTest.cpp  README.md  SifakisRefConvTest.cu  ViewerTest.cpp
src/tests/dispatch/: AxisOuterProductCudaTest.cu  AxisOuterProductTest.cpp  DispatchTableBasicCudaTest.cu  DispatchTableBasicImplCudaTest.cu  DispatchTableBasicOpCudaTest.cu  DispatchTableBasicUtils.cuh  DispatchTableCudaTest.cu  DispatchTableTest.cpp  DispatchTableTinyCudaTest.cu  ExampleFunctionalTest.cpp  ExampleReLUTest.cpp  ExampleUtils.h  IndexSpaceCudaTest.cu  IndexSpaceTest.cpp  PermutationMapTest.cpp  ScanLibCudaTest.cu  ScanLibHostTest.cpp  TraitsTest.cpp  ValueSpaceCudaTest.cu  ValueSpaceMapTest.cpp  ValueSpaceTest.cpp  ValuesCudaTest.cu  ValuesTest.cpp
src/tests/scripts/: generate_top_gaussian_contributor_dataset.py  write_rasterize_forward_test_data.py
src/tests/utils/: ImageUtils.cpp  ImageUtils.h  Tensor.h
(+772 files in other folders)
